# api-test-runner

./: .pre-commit-config.yaml  dev_requirements.txt  pyproject.toml
.github/workflows/: build-and-test.yml
src/: runner.py
src/adapters/: requests_adapter.py
src/api_test_runner/: runner.py
src/api_test_runner/adapters/: requests_adapter.py  urllib_adapter.py
src/api_test_runner/response_models/: response_attributes.py
src/response_models/: response.py  response_attributes.py
tests/: test_requests.py
