[tool.poetry]
name = "api-test-runner"
version = "0.1.0"
description = "Pure-python framework for defining REST API tests"
authors = ["AleksanderWWW <alwojnarowicz@gmail.com>"]
readme = "README.md"
packages = [
    { include = "api_test_runner", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
