[tool.poetry]
name = "api-test-runner"
version = "0.1.0"
description = "Pure-python framework for defining REST API tests"
authors = ["AleksanderWWW <alwojnarowicz@gmail.com>"]
readme = "README.md"
packages = [
    { include = "api_test_runner", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
force_grid_wrap = 2

[tool.mypy]
files = "src/api_test_runner"
mypy_path = "stubs"
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
